# Academy-Course-DAT31048

./: README.md  Step_1_import_data.py  Step_2_blindfolding_data.py  Step_3_univariate_stats.py  Step_4_univariate_graphs.py  Step_5a_outlier_graphs.py  Step_5b_outlier_report.py  Step_6a_scatterplots.py  Step_6b_correlation_heatmap.py  Step_7_association_stats.py  Step_8_association_survey.py  fosdem_nouns.xlsx  german_credit.csv  pyproject.toml  requirements.txt
