[project]
name = "open-risk-academy-course-dat31048"
version = "0.1.0"
description = "Supporting material for the Open Risk Academy course: Exploratory Data Analysis using Pandas, Seaborn and Statsmodels"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tables>=3.10.1",
]
